--- a/第一个2d游戏/.godot/editor/editor_layout.cfg
+++ b/第一个2d游戏/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://art/playerGrey_walk2.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://说明/", "res://art/")
+dock_filesystem_selected_paths=PackedStringArray("res://art/playerGrey_up2.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://说明/", "res://player/", "res://art/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -31,13 +31,13 @@ open_scenes=PackedStringArray("res://player/player.tscn")
 current_scene="res://player/player.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=9
+selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://player/player.gd"]
+selected_script="res://player/player.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
