--- a/第一个2d游戏/.godot/editor/script_editor_cache.cfg
+++ b/第一个2d游戏/.godot/editor/script_editor_cache.cfg
@@ -39,3 +39,17 @@ state={
 "selection": false,
 "syntax_highlighter": "纯文本"
 }
+
+[res://player/player.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 1,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 10,
+"scroll_position": 5.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
