--- a/第一个2d游戏/.godot/editor/script_editor_cache.cfg
+++ b/第一个2d游戏/.godot/editor/script_editor_cache.cfg
@@ -35,7 +35,21 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 252,
 "row": 65,
-"scroll_position": 49.0,
+"scroll_position": 48.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Mod/mod.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 9,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
