--- a/第一个2d游戏/.godot/editor/script_editor_cache.cfg
+++ b/第一个2d游戏/.godot/editor/script_editor_cache.cfg
@@ -33,9 +33,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 11,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 252,
+"h_scroll_position": 0,
 "row": 65,
-"scroll_position": 48.0,
+"scroll_position": 49.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -49,6 +49,20 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 9,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Main.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 13,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 5,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
