--- a/第一个2d游戏/.godot/editor/editor_layout.cfg
+++ b/第一个2d游戏/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -27,17 +27,17 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main/main.tscn", "res://player/player.tscn")
-current_scene="res://player/player.tscn"
+open_scenes=PackedStringArray("res://main/main.tscn", "res://player/player.tscn", "res://hub/hud.tscn")
+current_scene="res://main/main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Main.gd", "res://Mod/mod.gd", "res://player/player.gd"]
-selected_script="res://player/player.gd"
+open_scripts=["res://HUD.gd", "res://Main.gd", "res://Mod/mod.gd", "res://player/player.gd"]
+selected_script="res://Main.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
